--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,7 +2,8 @@ name: CI
 
 on:
   push:
-    branches: [ main ]
+    tags:
+      - "*"  # Action triggered on a new version (new tag)
 
 jobs:
   deploy:
