--- a/language-configuration.json
+++ b/language-configuration.json
@@ -1,6 +1,6 @@
 {
     "comments": {
-        // symbol used for single line comment. Remove this entry if your language does not support line comments
+        // symbol used for single line comment.
         "lineComment": "//"
     },
     // symbols used as brackets
@@ -13,7 +13,7 @@
         ["{", "}"],
         ["(", ")"]
     ],
-    // symbols that can be used to surround a selection
+    // symbols that that can be used to surround a selection
     "surroundingPairs": [
         ["{", "}"],
         ["(", ")"]
