--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "turing-machine",
     "displayName": "Turing Machine",
     "description": "Syntax highlighting for Turing Machine's syntax",
-    "version": "2.0.0",
+    "version": "2.1.0",
     "icon": "images/icon.png",
     "publisher": "MarcosGutirrezAlonso",
     "license": "MIT",
@@ -19,9 +19,10 @@
     "contributes": {
         "languages": [
             {
-                "id": "tmfile",
+                "id": "turingmachine",
                 "aliases": [
                     "tmfile",
+                    "turingmachine",
                     "turingfile"
                 ],
                 "extensions": [
@@ -36,9 +37,9 @@
         ],
         "grammars": [
             {
-                "language": "tmfile",
+                "language": "turingmachine",
                 "scopeName": "source.turingfile",
-                "path": "./syntaxes/tmfile.tmLanguage.json"
+                "path": "./syntaxes/turingmachine.tmLanguage.json"
             }
         ]
     }
